5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1637_2703.log
== TEST (2019-04-09 10:12:04) 
-- CODE:
num = int(input("idade:"))

if (num >= 18):
	mensagem = eleitor
else: 
	mensagem = nao_eleitor
	
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mensagem = nao_eleitor
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:12:57) 
-- CODE:
num = int(input("idade:"))

if (num >= 18):
	mensagem = "eleitor"
else: 
	mensagem = "nao_eleitor"
	
print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:13:06) 
-- CODE:
num = int(input("idade:"))

if (num >= 18):
	mensagem = "eleitor"
else: 
	mensagem = "nao_eleitor"
	
print(mensagem)
-- EXECUTION TIME:
0.122863
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
